--- a/package.json
+++ b/package.json
@@ -1,52 +1,55 @@
 {
-  "name": "3d-inventory",
-  "version": "0.0.2",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~15.1.4",
-    "@angular/common": "~15.1.4",
-    "@angular/compiler": "~15.1.4",
-    "@angular/core": "~15.1.4",
-    "@angular/forms": "~15.1.4",
-    "@angular/material": "~15.1.4",
-    "@angular/platform-browser": "~15.1.4",
-    "@angular/platform-browser-dynamic": "~15.1.4",
-    "@angular/router": "~15.1.4",
-    "@types/chance": "^1.1.3",
-    "@types/lodash": "^4.14.191",
-    "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.3",
-    "chance": "^1.1.9",
-    "install": "^0.13.0",
-    "jquery": "^3.6.3",
-    "lodash": "^4.17.21",
-    "popper.js": "^1.16.1",
-    "rxjs": "~7.8.0",
-    "three": "^0.149.0",
-    "tslib": "^2.5.0",
-    "zone.js": "~0.12.0"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~15.1.5",
-    "@angular/cli": "~15.1.5",
-    "@angular/compiler-cli": "^15.1.4",
-    "@types/jasmine": "~4.3.1",
-    "@types/jquery": "^3.5.16",
-    "@types/popper.js": "^1.11.0",
-    "@types/three": "^0.149.0",
-    "jasmine-core": "~4.5.0",
-    "karma": "~6.4.1",
-    "karma-chrome-launcher": "~3.1.1",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.1.0",
-    "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.5"
-  }
+	"name": "3d-inventory",
+	"version": "0.0.4",
+	"scripts": {
+		"ng": "ng",
+		"start": "ng serve",
+		"build": "ng build && npm run postbuild",
+		"postbuild": "cp -f README.md src/assets",
+		"watch": "ng build --watch --configuration development",
+		"test": "ng test"
+	},
+	"private": true,
+	"dependencies": {
+		"@angular/animations": "~15.1.4",
+		"@angular/common": "~15.1.4",
+		"@angular/compiler": "~15.1.4",
+		"@angular/core": "~15.1.4",
+		"@angular/forms": "~15.1.4",
+		"@angular/material": "~15.1.4",
+		"@angular/platform-browser": "~15.1.4",
+		"@angular/platform-browser-dynamic": "~15.1.4",
+		"@angular/router": "~15.1.4",
+		"@types/chance": "^1.1.3",
+		"@types/lodash": "^4.14.191",
+		"bootstrap": "^5.2.3",
+		"bootstrap-icons": "^1.10.3",
+		"chance": "^1.1.10",
+		"install": "^0.13.0",
+		"jquery": "^3.6.3",
+		"lodash": "^4.17.21",
+		"ngx-markdown": "^15.1.1",
+		"popper.js": "^1.16.1",
+		"rxjs": "~7.8.0",
+		"three": "^0.149.0",
+		"tslib": "^2.5.0",
+		"zone.js": "~0.12.0"
+	},
+	"devDependencies": {
+		"@angular-devkit/build-angular": "~15.1.5",
+		"@angular/cli": "~15.1.5",
+		"@angular/compiler-cli": "^15.1.4",
+		"@types/jasmine": "~4.3.1",
+		"@types/jquery": "^3.5.16",
+		"@types/popper.js": "^1.11.0",
+		"@types/three": "^0.149.0",
+		"jasmine-core": "~4.5.0",
+		"karma": "~6.4.1",
+		"karma-chrome-launcher": "~3.1.1",
+		"karma-coverage": "~2.2.0",
+		"karma-jasmine": "~5.1.0",
+		"karma-jasmine-html-reporter": "~2.0.0",
+		"source-map-loader": "^4.0.1",
+		"typescript": "~4.9.5"
+	}
 }
