--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
 		"@angular/platform-browser": "~15.1.4",
 		"@angular/platform-browser-dynamic": "~15.1.4",
 		"@angular/router": "~15.1.4",
-		"@types/chance": "^1.1.3",
 		"@types/lodash": "^4.14.191",
 		"bootstrap": "^5.2.3",
 		"bootstrap-icons": "^1.10.3",
-		"chance": "^1.1.10",
 		"install": "^0.13.0",
 		"jquery": "^3.6.3",
 		"lodash": "^4.17.21",
@@ -39,10 +37,14 @@
 		"@angular-devkit/build-angular": "~15.1.5",
 		"@angular/cli": "~15.1.5",
 		"@angular/compiler-cli": "^15.1.4",
+		"@types/chance": "^1.1.3",
 		"@types/jasmine": "~4.3.1",
 		"@types/jquery": "^3.5.16",
+		"@types/node": "^18.14.0",
 		"@types/popper.js": "^1.11.0",
 		"@types/three": "^0.149.0",
+		"@types/uuid": "^9.0.0",
+		"chance": "^1.1.10",
 		"jasmine-core": "~4.5.0",
 		"karma": "~6.4.1",
 		"karma-chrome-launcher": "~3.1.1",
@@ -50,6 +52,8 @@
 		"karma-jasmine": "~5.1.0",
 		"karma-jasmine-html-reporter": "~2.0.0",
 		"source-map-loader": "^4.0.1",
-		"typescript": "~4.9.5"
+		"typescript": "~4.9.5",
+		"unique-names-generator": "^4.7.1",
+		"uuid": "^9.0.0"
 	}
 }
