--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "3d-inventory",
-	"version": "0.0.4",
+	"version": "0.1.1",
 	"scripts": {
 		"ng": "ng",
 		"start": "ng serve",
@@ -11,40 +11,39 @@
 	},
 	"private": true,
 	"dependencies": {
-		"@angular/animations": "~15.1.4",
-		"@angular/common": "~15.1.4",
-		"@angular/compiler": "~15.1.4",
-		"@angular/core": "~15.1.4",
-		"@angular/forms": "~15.1.4",
-		"@angular/material": "~15.1.4",
-		"@angular/platform-browser": "~15.1.4",
-		"@angular/platform-browser-dynamic": "~15.1.4",
-		"@angular/router": "~15.1.4",
+		"@angular/animations": "^15.0.0",
+		"@angular/common": "^15.0.0",
+		"@angular/compiler": "^15.0.0",
+		"@angular/core": "^15.0.0",
+		"@angular/forms": "^15.0.0",
+		"@angular/material": "^15.0.0",
+		"@angular/platform-browser": "^15.0.0",
+		"@angular/platform-browser-dynamic": "^15.0.0",
+		"@angular/router": "^15.0.0",
+		"@ng-bootstrap/ng-bootstrap": "^14.0.1",
+		"@popperjs/core": "^2.11.6",
 		"@types/lodash": "^4.14.191",
 		"bootstrap": "^5.2.3",
 		"bootstrap-icons": "^1.10.3",
 		"install": "^0.13.0",
-		"jquery": "^3.6.3",
+		"jquery": "^3.6.4",
 		"lodash": "^4.17.21",
 		"ngx-markdown": "^15.1.1",
-		"popper.js": "^1.16.1",
 		"rxjs": "~7.8.0",
 		"three": "^0.149.0",
 		"tslib": "^2.5.0",
 		"zone.js": "~0.12.0"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~15.1.5",
-		"@angular/cli": "~15.1.5",
-		"@angular/compiler-cli": "^15.1.4",
-		"@types/chance": "^1.1.3",
+		"@angular-devkit/build-angular": "^15.0.0",
+		"@angular/cli": "^15.0.0",
+		"@angular/compiler-cli": "^15.0.0",
+		"@angular/localize": "^15.0.0",
 		"@types/jasmine": "~4.3.1",
 		"@types/jquery": "^3.5.16",
-		"@types/node": "^18.14.0",
-		"@types/popper.js": "^1.11.0",
+		"@types/node": "^18.14.6",
 		"@types/three": "^0.149.0",
-		"@types/uuid": "^9.0.0",
-		"chance": "^1.1.10",
+		"@types/uuid": "^9.0.1",
 		"jasmine-core": "~4.5.0",
 		"karma": "~6.4.1",
 		"karma-chrome-launcher": "~3.1.1",
