--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "compileOnSave": false,
+  "compileOnSave": true,
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist/out-tsc",
@@ -15,7 +15,7 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2017",
+    "target": "ES2022",
     "module": "es2020",
     "lib": [
       "es2018",
@@ -29,9 +29,4 @@
     "strictTemplates": true,
     "strictPropertyInitialization": false
   }
-  // "ts-node": {
-  //   "transpileOnly": true,
-  //   "files": true,
-  //   "swc": true
-  // }
 }
