--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^15.0.0",
+    "@angular/animations": "^15.2.6",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
@@ -25,45 +25,58 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^14.0.1",
-    "@popperjs/core": "^2.11.6",
-    "@types/lodash": "^4.14.191",
+    "@compodoc/compodoc": "^1.1.19",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
+    "@popperjs/core": "^2.11.7",
+    "@types/lodash": "^4.14.192",
     "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.3",
+    "bootstrap-icons": "^1.10.4",
+    "chalk": "^5.2.0",
+    "concurrently": "^8.0.1",
+    "date-fns": "^2.29.3",
     "install": "^0.13.0",
     "jquery": "^3.6.4",
+    "karma-cli": "^2.0.0",
     "lodash": "^4.17.21",
-    "ngx-markdown": "^15.1.1",
+    "nav-bar": "^1.0.3",
+    "ngx-markdown": "^15.1.2",
+    "ngx-pagination": "^6.0.3",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
-    "three": "^0.149.0",
+    "three": "^0.151.3",
     "tslib": "^2.5.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.2",
+    "@angular-devkit/build-angular": "^15.0.0",
     "@angular/cli": "^15.0.0",
     "@angular/compiler-cli": "^15.0.0",
     "@angular/localize": "^15.0.0",
-    "@types/eslint": "^8.21.1",
+    "@types/chalk": "^2.2.0",
+    "@types/concurrently": "^7.0.0",
+    "@types/date-fns": "^2.6.0",
+    "@types/eslint": "^8.37.0",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/jasmine": "~4.3.1",
     "@types/jquery": "^3.5.16",
-    "@types/node": "^18.14.6",
-    "@types/three": "^0.149.0",
+    "@types/node": "^18.15.11",
+    "@types/prismjs": "^1.26.0",
+    "@types/three": "^0.150.1",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
-    "jasmine-core": "~4.5.0",
+    "jasmine-core": "~4.6.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "lint-staged": "^13.2.0",
-    "prettier": "2.8.4",
+    "lint-staged": "^13.2.1",
+    "ng-packagr": "^15.2.2",
+    "prettier": "2.8.7",
     "source-map-loader": "^4.0.1",
     "typescript": "~4.9.5",
     "unique-names-generator": "^4.7.1",
