--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
   },
   "dependencies": {
     "@angular/animations": "^15.2.6",
-    "@angular/common": "^15.0.0",
-    "@angular/compiler": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/forms": "^15.0.0",
-    "@angular/material": "^15.0.0",
-    "@angular/platform-browser": "^15.0.0",
-    "@angular/platform-browser-dynamic": "^15.0.0",
-    "@angular/router": "^15.0.0",
+    "@angular/common": "^15.2.6",
+    "@angular/compiler": "^15.2.6",
+    "@angular/core": "^15.2.6",
+    "@angular/forms": "^15.2.6",
+    "@angular/material": "^15.2.6",
+    "@angular/platform-browser": "^15.2.6",
+    "@angular/platform-browser-dynamic": "^15.2.6",
+    "@angular/router": "^15.2.6",
     "@compodoc/compodoc": "^1.1.19",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
     "@popperjs/core": "^2.11.7",
@@ -45,8 +45,10 @@
     "karma-cli": "^2.0.0",
     "lodash": "^4.17.21",
     "nav-bar": "^1.0.3",
+    "ngx-bootstrap": "^10.2.0",
     "ngx-markdown": "^15.1.2",
     "ngx-pagination": "^6.0.3",
+    "node-sass": "^8.0.0",
     "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "three": "^0.151.3",
@@ -54,23 +56,24 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.0.0",
-    "@angular/cli": "^15.0.0",
-    "@angular/compiler-cli": "^15.0.0",
-    "@angular/localize": "^15.0.0",
+    "@angular-devkit/build-angular": "^15.2.5",
+    "@angular/cli": "^15.2.5",
+    "@angular/compiler-cli": "^15.2.6",
+    "@angular/localize": "^15.2.6",
     "@types/chalk": "^2.2.0",
     "@types/concurrently": "^7.0.0",
-    "@types/date-fns": "^2.6.0",
     "@types/eslint": "^8.37.0",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/jasmine": "~4.3.1",
     "@types/jquery": "^3.5.16",
+    "@types/karma-firefox-launcher": "^2.1.1",
     "@types/node": "^18.15.11",
+    "@types/node-sass": "^4.11.3",
     "@types/prismjs": "^1.26.0",
     "@types/three": "^0.150.1",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.57.1",
-    "@typescript-eslint/parser": "^5.57.1",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
@@ -78,6 +81,7 @@
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
+    "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "lint-staged": "^13.2.1",
