cleanup add description in README, add three.js generation data (walls, servers)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
   "cSpell.words": [
+    "Abient",
     "Interfance",
+    "nobezel",
+    "Objin",
     "PDU",
+    "Phong",
     "uuidv"
   ],
   "todo-tree.tree.showCountsInTree": true
