--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "0.3.0",
   "private": true,
   "scripts": {
-    "start:ng": "ng serve",
-    "start:json-server": "cd backend && json-server --watch db_v2.json",
-    "start": "concurrently -c \"bgBlue.bold,bgMagenta.bold\" --prefix \"{time}-{pid}\"  \"npm:start:ng\" \"npm:start:json-server\" --kill-others",
-    "kill": "killall \"ng serve\" && ng serve",
-    "test": "ng test",
-    "watch": "ng build --watch --configuration development",
     "build": "ng build && npm run postbuild",
     "postbuild": "cp -f README.md src/assets",
+    "ssr:build": "ng build && ng run 3d-inventory-angular-ui:server",
     "compodoc:build": "compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
+    "ssr:serve": "ng run serve:ssr",
+    "e2e": "ng e2e",
+    "kill": "killall \"ng serve\" && ng serve",
     "prepare": "husky install",
     "prettier": "prettier --check src/**/*.ts",
-    "set_opt": "export NODE_OPTIONS=--openssl-legacy-provider"
+    "set_opt": "export NODE_OPTIONS=--openssl-legacy-provider",
+    "ssr": "npm run dev:ssr",
+    "start": "concurrently -c \"bgBlue.bold,bgMagenta.bold\" --prefix \"{time}-{pid}\"  \"npm:start:ng\" \"npm:start:json-server\" --kill-others",
+    "start:json-server": "cd backend && json-server --watch db_v2.json",
+    "start:ng": "ng serve",
+    "test": "ng test",
+    "watch": "ng build --watch --configuration development",
+    "dev:ssr": "ng run 3d-inventory-angular-ui:serve-ssr",
+    "serve:ssr": "node dist/3d-inventory-angular-ui/server/main.js",
+    "build:ssr": "ng build && ng run 3d-inventory-angular-ui:server",
+    "prerender": "ng run 3d-inventory-angular-ui:prerender"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
@@ -30,9 +38,11 @@
     "@angular/material": "^15.2.6",
     "@angular/platform-browser": "^15.2.6",
     "@angular/platform-browser-dynamic": "^15.2.6",
+    "@angular/platform-server": "^15.2.6",
     "@angular/router": "^15.2.6",
     "@compodoc/compodoc": "^1.1.19",
     "@ng-bootstrap/ng-bootstrap": "^14.1.0",
+    "@nguniversal/express-engine": "^15.2.1",
     "@popperjs/core": "^2.11.7",
     "@types/lodash": "^4.14.194",
     "bootstrap": "^5.2.3",
@@ -40,6 +50,7 @@
     "chalk": "^5.2.0",
     "concurrently": "^8.0.1",
     "date-fns": "^2.30.0",
+    "express": "^4.18.2",
     "install": "^0.13.0",
     "jquery": "^3.6.4",
     "karma-cli": "^2.0.0",
@@ -61,13 +72,16 @@
     "@angular/cli": "^15.2.5",
     "@angular/compiler-cli": "^15.2.6",
     "@angular/localize": "^15.2.6",
+    "@nguniversal/builders": "^15.2.1",
     "@types/chalk": "^2.2.0",
     "@types/concurrently": "^7.0.0",
     "@types/eslint": "^8.37.0",
     "@types/eslint-config-prettier": "^6.11.0",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.1",
     "@types/jquery": "^3.5.16",
     "@types/karma-firefox-launcher": "^2.1.1",
+    "@types/marked": "^4.0.8",
     "@types/node": "^18.16.3",
     "@types/node-sass": "^4.11.3",
     "@types/prismjs": "^1.26.0",
