--- a/angular.json
+++ b/angular.json
@@ -82,6 +82,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "browserTarget": "project-name:build"
+          },
           "configurations": {
             "production": {
               "browserTarget": "3d-inventory-angular-ui:build:production"
