--- a/package.json
+++ b/package.json
@@ -1,21 +1,19 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "private": true,
   "scripts": {
+    "update": "npm update && npm upgrade",
     "build": "ng build && npm run postbuild",
     "postbuild": "cp -f README.md src/assets",
-    "ssr:build": "ng build && ng run 3d-inventory-angular-ui:server",
     "compodoc:build": "compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
-    "ssr:serve": "ng run serve:ssr",
     "e2e": "ng e2e",
-    "kill": "killall \"ng serve\" && ng serve",
+    "kill-ng": "killall \"ng serve\"",
     "prepare": "husky install",
     "prettier": "prettier --check src/**/*.ts",
     "set_opt": "export NODE_OPTIONS=--openssl-legacy-provider",
-    "ssr": "npm run dev:ssr",
     "start": "concurrently -c \"bgBlue.bold,bgMagenta.bold\" --prefix \"{time}-{pid}\"  \"npm:start:ng\" \"npm:start:json-server\" --kill-others",
     "start:json-server": "cd backend && json-server --watch db_v2.json",
     "start:ng": "ng serve",
@@ -30,26 +28,26 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
-    "@angular/animations": "^15.2.6",
-    "@angular/common": "^15.2.6",
-    "@angular/compiler": "^15.2.6",
-    "@angular/core": "^15.2.6",
-    "@angular/forms": "^15.2.6",
-    "@angular/material": "^15.2.6",
-    "@angular/platform-browser": "^15.2.6",
-    "@angular/platform-browser-dynamic": "^15.2.6",
-    "@angular/platform-server": "^15.2.6",
-    "@angular/router": "^15.2.6",
+    "@angular/animations": "^15.2.8",
+    "@angular/common": "^15.2.8",
+    "@angular/compiler": "^15.2.8",
+    "@angular/core": "^15.2.8",
+    "@angular/forms": "^15.2.8",
+    "@angular/material": "^15.2.8",
+    "@angular/platform-browser": "^15.2.8",
+    "@angular/platform-browser-dynamic": "^15.2.8",
+    "@angular/platform-server": "^15.2.8",
+    "@angular/router": "^15.2.8",
     "@compodoc/compodoc": "^1.1.19",
-    "@ng-bootstrap/ng-bootstrap": "^14.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@nguniversal/express-engine": "^15.2.1",
-    "@octokit/rest": "^19.0.7",
     "@popperjs/core": "^2.11.7",
     "@types/lodash": "^4.14.194",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "chalk": "^5.2.0",
     "concurrently": "^8.0.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "install": "^0.13.0",
@@ -69,27 +67,29 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.2.5",
-    "@angular/cli": "^15.2.5",
-    "@angular/compiler-cli": "^15.2.6",
-    "@angular/localize": "^15.2.6",
+    "@angular-devkit/build-angular": "^15.2.7",
+    "@angular/cli": "^15.2.7",
+    "@angular/compiler-cli": "^15.2.8",
+    "@angular/localize": "^15.2.8",
     "@nguniversal/builders": "^15.2.1",
+    "@octokit/types": "9.2.0",
     "@types/chalk": "^2.2.0",
     "@types/concurrently": "^7.0.0",
+    "@types/cors": "^2.8.13",
     "@types/eslint": "^8.37.0",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.1",
     "@types/jquery": "^3.5.16",
     "@types/karma-firefox-launcher": "^2.1.1",
-    "@types/marked": "^4.0.8",
+    "@types/marked": "^4.3.0",
     "@types/node": "^18.16.3",
     "@types/node-sass": "^4.11.3",
     "@types/prismjs": "^1.26.0",
     "@types/three": "^0.151.0",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.1",
-    "@typescript-eslint/parser": "^5.59.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
@@ -104,7 +104,7 @@
     "ng-packagr": "^15.2.2",
     "prettier": "2.8.8",
     "source-map-loader": "^4.0.1",
-    "typescript": "~4.9.5",
+    "typescript": "<5.0.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
     "vite": "^4.3.3"
