--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "private": true,
   "scripts": {
     "update": "npm update && npm upgrade",
@@ -18,6 +18,7 @@
     "start:json-server": "cd backend && json-server --watch db_v2.json",
     "start:ng": "ng serve",
     "test": "ng test",
+    "test:puppeter": "node puppeter-test.js",
     "watch": "ng build --watch --configuration development",
     "dev:ssr": "ng run 3d-inventory-angular-ui:serve-ssr",
     "serve:ssr": "node dist/3d-inventory-angular-ui/server/main.js",
@@ -53,13 +54,18 @@
     "install": "^0.13.0",
     "jquery": "^3.6.4",
     "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-remap-istanbul": "^0.6.0",
     "lodash": "^4.17.21",
+    "mkdirp": "^3.0.1",
     "nav-bar": "^1.0.3",
     "ngx-bootstrap": "^10.3.0",
     "ngx-markdown": "^15.1.2",
     "ngx-pagination": "^6.0.3",
     "node-sass": "^8.0.0",
     "prismjs": "^1.29.0",
+    "puppeteer": "^20.1.1",
+    "rimraf": "^5.0.0",
     "rxjs": "~7.8.1",
     "three": "^0.152.2",
     "three-orbitcontrols-ts": "^0.1.2",
@@ -80,16 +86,20 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.1",
     "@types/jquery": "^3.5.16",
+    "@types/karma-coverage-istanbul-reporter": "^2.1.1",
     "@types/karma-firefox-launcher": "^2.1.1",
     "@types/marked": "^4.3.0",
-    "@types/node": "^18.16.3",
+    "@types/mkdirp": "^2.0.0",
+    "@types/node": "^18.16.5",
     "@types/node-sass": "^4.11.3",
     "@types/prismjs": "^1.26.0",
+    "@types/puppeteer": "^7.0.4",
+    "@types/rimraf": "^4.0.5",
     "@types/three": "^0.151.0",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
-    "eslint": "^8.39.0",
+    "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "jasmine-core": "~4.6.0",
@@ -106,6 +116,6 @@
     "typescript": "<5.0.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
-    "vite": "^4.3.4"
+    "vite": "^4.3.5"
   }
 }
