--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start:json-server": "cd backend && json-server --watch db_v2.json",
     "start:ng": "ng serve",
     "test": "ng test",
-    "test:puppeter": "node puppeter-test.js",
+    "test:nyc": "nyc --reporter=html --reporter=text npm test",
     "watch": "ng build --watch --configuration development",
     "dev:ssr": "ng run 3d-inventory-angular-ui:serve-ssr",
     "serve:ssr": "node dist/3d-inventory-angular-ui/server/main.js",
@@ -42,7 +42,6 @@
     "@compodoc/compodoc": "^1.1.19",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@nguniversal/express-engine": "^15.2.1",
-    "@popperjs/core": "^2.11.7",
     "@types/lodash": "^4.14.194",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
@@ -53,9 +52,8 @@
     "express": "^4.18.2",
     "install": "^0.13.0",
     "jquery": "^3.7.0",
+    "jsdom": "^21.1.2",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^3.0.3",
-    "karma-remap-istanbul": "^0.6.0",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
     "nav-bar": "^1.0.3",
@@ -64,7 +62,6 @@
     "ngx-pagination": "^6.0.3",
     "node-sass": "^8.0.0",
     "prismjs": "^1.29.0",
-    "puppeteer": "^20.1.2",
     "rimraf": "^5.0.0",
     "rxjs": "~7.8.1",
     "three": "^0.152.2",
@@ -86,8 +83,7 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.1",
     "@types/jquery": "^3.5.16",
-    "@types/karma-coverage-istanbul-reporter": "^2.1.1",
-    "@types/karma-firefox-launcher": "^2.1.1",
+    "@types/karma-jsdom-launcher": "^8.0.2",
     "@types/marked": "^4.3.0",
     "@types/mkdirp": "^2.0.0",
     "@types/node": "^18.16.5",
@@ -104,15 +100,13 @@
     "husky": "^8.0.3",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.2",
-    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
-    "karma-firefox-launcher": "^2.1.2",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "karma-jsdom-launcher": "^14.0.0",
     "lint-staged": "^13.2.2",
     "ng-packagr": "^15.2.2",
     "prettier": "2.8.8",
-    "source-map-loader": "^4.0.1",
     "typescript": "<5.0.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
