routing dont fixed

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "3d-inventory-angular-ui",
-  "version": "0.3.2",
+  "version": "0.3.3",
   "private": true,
   "scripts": {
     "update": "npm update && npm upgrade",
@@ -18,7 +18,7 @@
     "start:json-server": "cd backend && json-server --watch db_v2.json",
     "start:ng": "ng serve",
     "test": "ng test",
-    "test:nyc": "nyc --reporter=html --reporter=text npm test",
+    "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
     "watch": "ng build --watch --configuration development",
     "dev:ssr": "ng run 3d-inventory-angular-ui:serve-ssr",
     "serve:ssr": "node dist/3d-inventory-angular-ui/server/main.js",
@@ -54,6 +54,7 @@
     "jquery": "^3.7.0",
     "jsdom": "^21.1.2",
     "karma-cli": "^2.0.0",
+    "karma-typescript": "^5.5.4",
     "lodash": "^4.17.21",
     "mkdirp": "^3.0.1",
     "nav-bar": "^1.0.3",
@@ -64,6 +65,7 @@
     "prismjs": "^1.29.0",
     "rimraf": "^5.0.0",
     "rxjs": "~7.8.1",
+    "source-map-support": "^0.5.21",
     "three": "^0.152.2",
     "three-orbitcontrols-ts": "^0.1.2",
     "tslib": "^2.5.0",
@@ -74,6 +76,7 @@
     "@angular/cli": "^15.2.7",
     "@angular/compiler-cli": "^15.2.8",
     "@angular/localize": "^15.2.8",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@nguniversal/builders": "^15.2.1",
     "@types/chalk": "^2.2.0",
     "@types/concurrently": "^7.0.0",
@@ -83,6 +86,8 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.1",
     "@types/jquery": "^3.5.16",
+    "@types/karma-coverage": "^2.0.1",
+    "@types/karma-jasmine": "^4.0.2",
     "@types/karma-jsdom-launcher": "^8.0.2",
     "@types/marked": "^4.3.0",
     "@types/mkdirp": "^2.0.0",
@@ -91,6 +96,7 @@
     "@types/prismjs": "^1.26.0",
     "@types/puppeteer": "^7.0.4",
     "@types/rimraf": "^4.0.5",
+    "@types/source-map-support": "^0.5.6",
     "@types/three": "^0.151.0",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
@@ -106,6 +112,7 @@
     "karma-jsdom-launcher": "^14.0.0",
     "lint-staged": "^13.2.2",
     "ng-packagr": "^15.2.2",
+    "nyc": "^15.1.0",
     "prettier": "2.8.8",
     "typescript": "<5.0.0",
     "unique-names-generator": "^4.7.1",
