start fixing device edit

--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
     "prepare": "husky install",
     "prettier": "prettier --check src/**/*.ts",
     "set_opt": "export NODE_OPTIONS=--openssl-legacy-provider",
-    "start": "concurrently -c \"bgBlue.bold,bgMagenta.bold\" --prefix \"{time}-{pid}\"  \"npm:start:ng\" \"npm:start:json-server\" --kill-others",
+    "start:all": "concurrently -c \"bgBlue.bold,bgMagenta.bold\" --prefix \"{time}-{pid}\"  \"npm:start:ng\" \"npm:start:json-server\" --kill-others",
     "start:json-server": "cd backend && json-server --watch db_v2.json",
-    "start:ng": "ng serve",
+    "start": "ng serve --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
-    "watch": "ng build --watch --configuration development",
     "dev:ssr": "ng run 3d-inventory-angular-ui:serve-ssr",
     "serve:ssr": "node dist/3d-inventory-angular-ui/server/main.js",
     "build:ssr": "ng build && ng run 3d-inventory-angular-ui:server",
