--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "private": true,
   "scripts": {
     "update": "npm update && npm upgrade",
-    "build": "ng build && cp -f README.md src/assets",
+    "build": "cp -f README.md src/assets && ng build --watch --cross-origin anonymous --source-map true",
     "compodoc:build": "compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
-    "e2e": "ng e2e",
     "kill-ng": "killall \"ng serve\"",
     "prepare": "husky install",
     "prettier": "prettier --check src/**/*.ts",
-    "set_opt": "export NODE_OPTIONS=--openssl-legacy-provider",
     "start:all": "concurrently -c \"bgBlue.bold,bgMagenta.bold\" --prefix \"{time}-{pid}\"  \"npm:start:ng\" \"npm:start:json-server\" --kill-others",
     "start:json-server": "cd backend && json-server --watch db_v2.json",
     "start": "ng serve --poll=2000  --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
+    "test:e2e": "ng e2e",
     "dev:ssr": "ng run 3d-inventory-angular-ui:serve-ssr",
     "serve:ssr": "node dist/3d-inventory-angular-ui/server/main.js",
     "build:ssr": "ng build && ng run 3d-inventory-angular-ui:server",
@@ -61,12 +60,12 @@
     "ngx-pagination": "^6.0.3",
     "node-sass": "^8.0.0",
     "prismjs": "^1.29.0",
-    "rimraf": "^5.0.0",
+    "rimraf": "^5.0.1",
     "rxjs": "~7.8.1",
     "source-map-support": "^0.5.21",
     "three": "^0.152.2",
     "three-orbitcontrols-ts": "^0.1.2",
-    "tslib": "^2.5.0",
+    "tslib": "^2.5.2",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -115,6 +114,6 @@
     "typescript": "<5.0.0",
     "unique-names-generator": "^4.7.1",
     "uuid": "^9.0.0",
-    "vite": "^4.3.6"
+    "vite": "^4.3.8"
   }
 }
