--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/platform-browser-dynamic": "^15.2.8",
     "@angular/platform-server": "^15.2.8",
     "@angular/router": "^15.2.8",
-    "@compodoc/compodoc": "^1.1.19",
+    "@compodoc/compodoc": "^1.1.21",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@nguniversal/express-engine": "^15.2.1",
     "@types/lodash": "^4.14.194",
@@ -46,6 +46,7 @@
     "concurrently": "^8.0.1",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "jquery": "^3.7.0",
@@ -58,7 +59,7 @@
     "ngx-bootstrap": "^10.3.0",
     "ngx-markdown": "^15.1.2",
     "ngx-pagination": "^6.0.3",
-    "node-sass": "^8.0.0",
+    "node-sass": "^9.0.0",
     "prismjs": "^1.29.0",
     "rimraf": "^5.0.1",
     "rxjs": "~7.8.1",
@@ -78,7 +79,8 @@
     "@types/chalk": "^2.2.0",
     "@types/concurrently": "^7.0.0",
     "@types/cors": "^2.8.13",
-    "@types/eslint": "^8.37.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/eslint": "^8.40.0",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.1",
@@ -94,11 +96,11 @@
     "@types/puppeteer": "^7.0.4",
     "@types/rimraf": "^4.0.5",
     "@types/source-map-support": "^0.5.6",
-    "@types/three": "^0.151.0",
+    "@types/three": "^0.152.0",
     "@types/uuid": "^9.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
     "jasmine-core": "~4.6.0",
