Update package version to 0.3.4 and add attribute dictionary list component with its related files and functionality. Add attribute dictionary list component with its related files and functionality.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
     "Phong",
     "uuidv"
   ],
-  "todo-tree.tree.showCountsInTree": true
+  "todo-tree.tree.showCountsInTree": true,
+  "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}${profileName}${separator}${appName} ${separator} [Branch: karol-preiskorn/issue13]"
 }
