--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "3d-inventory-angular-ui",
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
+  },
   "version": "0.3.4",
   "private": true,
   "scripts": {
@@ -60,6 +65,7 @@
     "ngx-markdown": "^15.1.2",
     "ngx-pagination": "^6.0.3",
     "node-sass": "^9.0.0",
+    "path-browserify": "^1.0.1",
     "prismjs": "^1.29.0",
     "rimraf": "^5.0.1",
     "rxjs": "~7.8.1",
@@ -92,6 +98,7 @@
     "@types/mkdirp": "^2.0.0",
     "@types/node": "^18.16.5",
     "@types/node-sass": "^4.11.3",
+    "@types/path-browserify": "^1.0.0",
     "@types/prismjs": "^1.26.0",
     "@types/puppeteer": "^7.0.4",
     "@types/rimraf": "^4.0.5",
