--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "browser": {
     "fs": false,
     "path": false,
-    "os": false
+    "os": false,
+    "buffer": false,
+    "process": false
   },
   "version": "0.3.4",
   "private": true,
@@ -22,9 +24,6 @@
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test",
     "test:e2e": "ng e2e",
-    "dev:ssr": "ng run 3d-inventory-angular-ui:serve-ssr",
-    "serve:ssr": "node dist/3d-inventory-angular-ui/server/main.js",
-    "build:ssr": "ng build && ng run 3d-inventory-angular-ui:server",
     "prerender": "ng run 3d-inventory-angular-ui:prerender"
   },
   "lint-staged": {
@@ -44,7 +43,7 @@
     "@compodoc/compodoc": "^1.1.21",
     "@ng-bootstrap/ng-bootstrap": "^14.1.1",
     "@nguniversal/express-engine": "^15.2.1",
-    "@types/lodash": "^4.14.194",
+    "@types/lodash": "^4.14.195",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
     "chalk": "^5.2.0",
@@ -56,6 +55,7 @@
     "install": "^0.13.0",
     "jquery": "^3.7.0",
     "jsdom": "^21.1.2",
+    "json-server": "^0.17.3",
     "karma-cli": "^2.0.0",
     "karma-typescript": "^5.5.4",
     "lodash": "^4.17.21",
@@ -67,9 +67,9 @@
     "node-sass": "^9.0.0",
     "path-browserify": "^1.0.1",
     "prismjs": "^1.29.0",
+    "process": "^0.11.10",
     "rimraf": "^5.0.1",
     "rxjs": "~7.8.1",
-    "source-map-support": "^0.5.21",
     "three": "^0.152.2",
     "three-orbitcontrols-ts": "^0.1.2",
     "tslib": "^2.5.2",
@@ -82,27 +82,21 @@
     "@angular/localize": "^15.2.8",
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@nguniversal/builders": "^15.2.1",
-    "@types/chalk": "^2.2.0",
-    "@types/concurrently": "^7.0.0",
     "@types/cors": "^2.8.13",
-    "@types/dotenv": "^8.2.0",
     "@types/eslint": "^8.40.0",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/express": "^4.17.17",
-    "@types/jasmine": "~4.3.1",
+    "@types/jasmine": "~4.3.2",
     "@types/jquery": "^3.5.16",
+    "@types/json-server": "^0.14.4",
     "@types/karma-coverage": "^2.0.1",
     "@types/karma-jasmine": "^4.0.2",
     "@types/karma-jsdom-launcher": "^8.0.2",
-    "@types/marked": "^4.3.0",
-    "@types/mkdirp": "^2.0.0",
-    "@types/node": "^18.16.5",
+    "@types/marked": "^4.0.3",
+    "@types/node": "^20.2.5",
     "@types/node-sass": "^4.11.3",
     "@types/path-browserify": "^1.0.0",
     "@types/prismjs": "^1.26.0",
-    "@types/puppeteer": "^7.0.4",
-    "@types/rimraf": "^4.0.5",
-    "@types/source-map-support": "^0.5.6",
     "@types/three": "^0.152.0",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
