--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,5 @@
     "uuidv"
   ],
   "todo-tree.tree.showCountsInTree": true,
-  "window.title": "${dirty}${activeEditorShort}${separator}${rootName}${separator}${profileName}${separator}${appName} ${separator} [Branch: karol-preiskorn/issue13]"
+  "window.title": "${dirty} ${activeEditorMedium}"
 }
