--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "kill-ng": "killall \"ng serve\"",
     "prepare": "husky install",
     "prettier": "prettier --check src/**/*.ts",
-    "start:json-server": "cd backend && json-server --watch db_v2.json",
+    "json-server": "cd backend && json-server --watch db_v2.json",
     "start": "ng serve  --watch",
     "test": "ng test",
     "test:nyc": "nyc --reporter=html --produce-source-map --reporter=text npm test"
@@ -46,6 +46,7 @@
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
+    "depcheck": "^1.4.3",
     "express": "^4.18.2",
     "install": "^0.13.0",
     "jquery": "^3.7.0",
@@ -75,8 +76,6 @@
     "@angular/cli": "^15.2.8",
     "@angular/compiler-cli": "^15.2.8",
     "@angular/localize": "^15.2.8",
-    "@istanbuljs/nyc-config-typescript": "^1.0.2",
-    "@nguniversal/builders": "^15.2.1",
     "@types/cors": "^2.8.13",
     "@types/eslint": "^8.40.1",
     "@types/eslint-config-prettier": "^6.11.0",
@@ -111,7 +110,6 @@
     "prettier": "2.8.8",
     "typescript": "<5.0.0",
     "unique-names-generator": "^4.7.1",
-    "uuid": "^9.0.0",
-    "vite": "^4.3.9"
+    "uuid": "^9.0.0"
   }
 }
