--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,8 @@
   "trailingComma": "es5",
   "tabWidth": 2,
   "semi": false,
-  "singleQuote": true
+  "singleQuote": true,
+  "bracketSameLine": true,
+  "printWidth": 120,
+  "proseWrap": "preserve"
 }
