--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,7 @@
 {
   "recommendations": [
-    "unional.vscode-sort-package-json"
+    "unional.vscode-sort-package-json",
+    "ms-vscode.js-debug-nightly",
+    "firefox-devtools.vscode-firefox-debug"
   ]
 }
