--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^2.30.0",
     "depcheck": "^1.4.3",
     "express": "^4.18.2",
+    "https-browserify": "^1.0.0",
     "install": "^0.13.0",
     "jquery": "^3.7.0",
     "jsdom": "^21.1.2",
@@ -69,6 +70,7 @@
     "three": "^0.152.2",
     "three-orbitcontrols-ts": "^0.1.2",
     "tslib": "^2.5.2",
+    "winston": "^3.9.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -87,14 +89,15 @@
     "@types/karma-jasmine": "^4.0.2",
     "@types/karma-jsdom-launcher": "^8.0.2",
     "@types/marked": "^4.3.1",
-    "@types/node": "^20.2.6",
+    "@types/node": "^20.3.1",
     "@types/node-sass": "^4.11.3",
     "@types/path-browserify": "^1.0.0",
     "@types/prismjs": "^1.26.0",
     "@types/three": "^0.152.1",
     "@types/uuid": "^9.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.59.9",
-    "@typescript-eslint/parser": "^5.59.9",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "angular-cli-ghpages": "^1.0.6",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
     "husky": "^8.0.3",
