Refactor the Add Attribute component HTML and add styling
The Add Attribute component HTML has been refactored to improve its usability and user experience. This includes adding spacing to form elements, changing form labels and updating the UI to be more intuitive. Additionally, new form validation has been added to ensure that all required fields are filled before the form can be submitted, and styling has been added with a new border class for better visual consistency.

--- a/angular.json
+++ b/angular.json
@@ -38,11 +38,11 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/prismjs/themes/prism-okaidia.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
               "node_modules/marked/marked.min.js",
               "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js"
             ]
@@ -120,11 +120,11 @@
             "styles": [
               "src/styles.scss",
               "node_modules/bootstrap/scss/bootstrap.scss",
-              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.scss",
               "node_modules/prismjs/themes/prism-okaidia.css"
             ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.js",
               "node_modules/marked/marked.min.js",
               "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.js"
             ]
