--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "update": "npm update && npm upgrade",
     "build": "cp -f README.md src/assets && ng build --watch --cross-origin anonymous --source-map true",
+    "cp": "cp -f README.md src/assets",
     "compodoc:build": "compodoc -p tsconfig.doc.json",
     "compodoc:build-and-serve": "compodoc -p tsconfig.doc.json -s",
     "compodoc:serve": "compodoc -s",
@@ -72,7 +73,7 @@
     "three-orbitcontrols-ts": "^0.1.2",
     "tslib": "^2.5.2",
     "winston": "^3.9.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.8",
@@ -80,10 +81,10 @@
     "@angular/compiler-cli": "^15.2.8",
     "@angular/localize": "^15.2.8",
     "@types/cors": "^2.8.13",
-    "@types/eslint": "^8.40.1",
+    "@types/eslint": "^8.40.2",
     "@types/eslint-config-prettier": "^6.11.0",
     "@types/express": "^4.17.17",
-    "@types/jasmine": "~4.3.2",
+    "@types/jasmine": "~4.3.4",
     "@types/jquery": "^3.5.16",
     "@types/json-server": "^0.14.4",
     "@types/karma-coverage": "^2.0.1",
