Update `README.md` with changes to `FLOORS` attribute. - Removes invalid ID item for `FLOORS`. - Adds `@TODO` for further modification.
Update `README.md` with changes to `FLOORS` attribute.

- Removes invalid ID item for `FLOORS`.
- Adds `@TODO` for further modification.

--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
 		"**/*": "prettier --write --ignore-unknown"
 	},
 	"dependencies": {
-		"@angular-eslint/eslint-plugin": "^15.2.1",
-		"@angular/animations": "^15.2.9",
-		"@angular/common": "^15.2.9",
-		"@angular/compiler": "^15.2.9",
-		"@angular/core": "^15.2.9",
-		"@angular/forms": "^15.2.9",
-		"@angular/material": "^15.2.9",
-		"@angular/platform-browser": "^15.2.9",
-		"@angular/platform-browser-dynamic": "^15.2.9",
-		"@angular/platform-server": "^15.2.9",
-		"@angular/router": "^15.2.9",
+		"@angular-eslint/eslint-plugin": "^16.1.0",
+		"@angular/animations": "^16.1.5",
+		"@angular/common": "^16.1.5",
+		"@angular/compiler": "^16.1.5",
+		"@angular/core": "^16.1.5",
+		"@angular/forms": "^16.1.5",
+		"@angular/material": "^16.1.5",
+		"@angular/platform-browser": "^16.1.5",
+		"@angular/platform-browser-dynamic": "^16.1.5",
+		"@angular/platform-server": "^16.1.5",
+		"@angular/router": "^16.1.5",
 		"@compodoc/compodoc": "^1.1.21",
-		"@ng-bootstrap/ng-bootstrap": "^14.2.0",
-		"@nguniversal/express-engine": "^15.2.1",
+		"@ng-bootstrap/ng-bootstrap": "^15.1.0",
+		"@nguniversal/express-engine": "^16.1.1",
 		"@types/lodash": "^4.14.195",
 		"bootstrap": "^5.3.0",
 		"bootstrap-icons": "^1.10.5",
@@ -57,7 +57,7 @@
 		"https-browserify": "^1.0.0",
 		"install": "^0.13.0",
 		"jquery": "^3.7.0",
-		"jsdom": "^21.1.2",
+		"jsdom": "^22.1.0",
 		"json-server": "^0.17.3",
 		"karma-cli": "^2.0.0",
 		"karma-typescript": "^5.5.4",
@@ -65,25 +65,26 @@
 		"mkdirp": "^3.0.1",
 		"nav-bar": "^1.0.3",
 		"ngx-bootstrap": "^10.3.0",
-		"ngx-markdown": "^15.1.2",
+		"ngx-markdown": "^16.0.0",
 		"ngx-pagination": "^6.0.3",
 		"node-sass": "^9.0.0",
+		"npm-check-updates": "^16.10.15",
 		"path-browserify": "^1.0.1",
 		"prismjs": "^1.29.0",
 		"process": "^0.11.10",
 		"rimraf": "^5.0.1",
-		"rxjs": "^7.4.0",
-		"three": "^0.152.2",
+		"rxjs": "^7.8.1",
+		"three": "^0.154.0",
 		"three-orbitcontrols-ts": "^0.1.2",
-		"tslib": "^2.5.2",
+		"tslib": "^2.6.0",
 		"winston": "^3.10.0",
 		"zone.js": "~0.13.1"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "^15.2.9",
-		"@angular/cli": "^15.2.9",
-		"@angular/compiler-cli": "^15.2.9",
-		"@angular/localize": "^15.2.9",
+		"@angular-devkit/build-angular": "^16.1.4",
+		"@angular/cli": "^16.1.4",
+		"@angular/compiler-cli": "^16.1.5",
+		"@angular/localize": "^16.1.5",
 		"@types/cors": "^2.8.13",
 		"@types/eslint": "^8.44.0",
 		"@types/eslint-config-prettier": "^6.11.0",
@@ -94,17 +95,17 @@
 		"@types/karma-coverage": "^2.0.1",
 		"@types/karma-jasmine": "^4.0.2",
 		"@types/karma-jsdom-launcher": "^8.0.2",
-		"@types/marked": "^4.3.1",
-		"@types/node": "^20.3.3",
+		"@types/marked": "^5.0.1",
+		"@types/node": "^20.4.2",
 		"@types/node-sass": "^4.11.3",
 		"@types/path-browserify": "^1.0.0",
 		"@types/prismjs": "^1.26.0",
-		"@types/three": "^0.152.1",
+		"@types/three": "^0.154.0",
 		"@types/uuid": "^9.0.2",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
 		"@typescript-eslint/parser": "^6.0.0",
 		"angular-cli-ghpages": "^1.0.6",
-		"eslint": "^8.44.0",
+		"eslint": "^8.45.0",
 		"eslint-config-prettier": "^8.8.0",
 		"husky": "^8.0.3",
 		"jasmine-core": "~5.0.1",
@@ -115,10 +116,10 @@
 		"karma-jsdom-launcher": "^15.0.0",
 		"lint-staged": "^13.2.3",
 		"lite-server": "^2.6.1",
-		"ng-packagr": "^15.2.2",
+		"ng-packagr": "^16.1.0",
 		"nyc": "^15.1.0",
 		"prettier": "3.0.0",
-		"typescript": "<5.0.0",
+		"typescript": "^5.1.6",
 		"unique-names-generator": "^4.7.1",
 		"uuid": "^9.0.0"
 	}
