Add Python code formatting settings and update file extension to `.js` for `version-change.py`.
- Added Python code formatting settings.
- Updated file extension to `.js` for `version-change.py`.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,9 @@
     "uuidv"
   ],
   "todo-tree.tree.showCountsInTree": true,
-  "window.title": "${dirty} ${activeEditorMedium}"
+  "window.title": "${dirty} ${activeEditorMedium}",
+  "[python]": {
+    "editor.defaultFormatter": "ms-python.black-formatter"
+  },
+  "python.formatting.provider": "none"
 }
