Add `Formly` library for form creation
- Add Formly library for simplifying form creation and validation.
- Update `app.module.ts` to import `FloorService` for dependency injection.
- Update `add-floor.component.html` to use Formly for form generation and validation.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "unional.vscode-sort-package-json",
     "ms-vscode.js-debug-nightly",
-    "firefox-devtools.vscode-firefox-debug"
+    "firefox-devtools.vscode-firefox-debug",
+    "dbaeumer.vscode-eslint"
   ]
 }
