feat: Add "Attribute object" section to add-attribute.component.html
This commit adds a new "Attribute object" section to the add-attribute.component.html file. The section includes a form for adding attributes and two buttons: "Add attribute" and "Generate random data". The section is placed right after the opening form tag.

Refs #123

--- a/angular.json
+++ b/angular.json
@@ -67,14 +67,15 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
-              "outputHashing": "all",
+              "outputHashing": "all"
             },
             "optimization": {
               "scripts": true,
               "styles": {
                 "minify": true,
-                "inlineCritical": false
-              }
+                "inlineCritical": true
+              },
+              "fonts": true
             },
             "development": {
               "buildOptimizer": false,
